# cbr_petrobras

./: CMakeLists.txt  README.md  package.xml  setup.py
arena_models/: lit_world.world
arena_models/models/box/: model.sdf
arena_models/models/box/materials/scripts/: base.material  repeated.material
launch/: petrobras_arena.launch  petrobras_flight.launch
rviz/: petrobras_rviz.rviz
urdf/: quadrotor_petrobras.gazebo.xacro  quadrotor_petrobras.urdf.xacro  quadrotor_petrobras_depthcam.gazebo.xacro  quadrotor_petrobras_depthcam.urdf.xacro  zed_camera.urdf.xacro
worlds/: petrobras_arena.world
